1998-06-28  Mikael Djurfeldt  <mdj@kenneth>

	* tcltk.scm (tcl-type-converters): Added `string' to set of type
	converters.

Thu Jun 25 06:07:32 1998  Mikael Djurfeldt  <mdj@totoro.red-bean.com>

	* configure.in: Move checks for X in front of check for tk.h so
	that proper CPPFLAGS are used during the test.

1998-06-01  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* Makefile.am: Install headers under $(includedir)/guile-tcltk

1998-05-09  Dave Love  <d.love@dl.ac.uk>

        * configure.in (TCLTK_INCLUDE): Look for headers in a `tcl'
        subdirectory and set variable appropriately if found.
        (CPPFLAGS): Add TCLTK_INCLUDE, TK_INCLUDE here.
        (CFLAGS): Remove them from here.

1998-04-21  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* hand.scm: New demo.

	* Makefile.am: Add new demo.

	* README: Describe new demo.

1998-04-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* breakout.scm (loop): Use `usleep' for game-loop.

	* configure.in: Test that tcl/tk is of a reasonable version.

1998-04-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (libgtcltk_la_LDFLAGS): Bump version number to 1.0.

	* README: Some minor docs.

	* graph.scm, breakout.scm: Demos.

	* guile-tk.c (scm_init_main_window, scm_main_loop,
	scm_num_main_windows): Renamed to scm_tk_init_main_window,
	scm_tk_main_loop, scm_tk_num_main_windows.
	(scm_tk_loop_p): New procedure: Returns #t if the tk handler loop
	is active.

1998-04-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tcltk.scm (tk-make-main-window): Don't create main application
	window if it already exists.
	(tk-main-window?): New procedure.

1998-04-15  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: If library names aren't supplied by the user
	through --with-tcl and --with-tk, then test both tcl7.6 and
	tcl7.5 as well as tk4.2 and tk4.1.

1998-04-14  Mikael Djurfeldt  <mdj@nada.kth.se>

	* Makefile.am (BUILT_SOURCES): Added.  Used to build .x-files.

1998-04-12  Mikael Djurfeldt  <mdj@kenneth>
